--- a/POO/Gerenciador De Condominios/src/view/paineis/InformacoesPessoaisView.form
+++ b/POO/Gerenciador De Condominios/src/view/paineis/InformacoesPessoaisView.form
@@ -171,6 +171,9 @@
       </Events>
     </Component>
     <Component class="javax.swing.JTextField" name="CPFjTextField">
+      <Properties>
+        <Property name="editable" type="boolean" value="false"/>
+      </Properties>
     </Component>
     <Component class="javax.swing.JTextField" name="telefonejTextField">
     </Component>
